# one

./: .gitignore  .prettierignore  README.md  package.json
.github/workflows/: deploy.prod.yml
modal/: .gitignore  README.md  pyproject.toml
modal/metricsubs_modal/: api.py  config.py  main.py
modal/metricsubs_modal/utils/: config.py  convex.py  video.py  youtube.py
web/: package-lock.json  package.json  react-router.config.ts
web/app/: app.css  root.tsx  routes.ts  toast.css
web/app/components/: layout.tsx
web/app/components/common/: file-dropzone.tsx  file-preview-item.tsx  logo-icon.tsx  priority-picker.tsx  project-creating-sonner.tsx  tag-input.tsx  theme-toggle.tsx  thumbnail-picker.tsx
web/app/components/dashboard/: dashboard-header.tsx  dashboard-page-title.tsx
web/app/components/form/: app-form.ts  checkbox-field.tsx  field-error.tsx  field-label.tsx  file-dropzone-field.tsx  form-context.ts  mini-date-picker-field.tsx  priority-picker-field.tsx  submit-button.tsx  (+4 more)
web/app/core/: file.ts  project.ts
web/app/hooks/: use-file-upload.tsx  use-media-query.ts
web/app/lib/: auth.ts  convex.ts  crypto.ts  file.ts  format.ts  primitive.ts  storage.ts
web/app/routes/: example.tsx  home.tsx  sign-in.tsx
web/convex/: auth.config.js  auth.config.ts  auth.tsx  example.ts  http.ts  large_files.ts  posthug.ts  schema.ts  utils.ts  workflow.ts
web/convex/_generated/: api.d.ts
web/convex/email/: http_sender.ts  internal_sender.ts  utils.ts
web/convex/projects/: manage.ts  stats.ts  tags.ts
web/scripts/: generate-keys.mjs  generate-secret.mjs
(+47 files in other folders)
